// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`slqe/SqlManagementException/UpdateSqlManagementException render update sql management exception when type is cidr 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  更新管控SQL例外
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="匹配类型"
                      >
                        匹配类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-radio-group ant-radio-group-outline"
                            id="type"
                          >
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                关键字
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="fp_sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                SQL指纹
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="ip"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                IP
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio ant-radio-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-radio-input"
                                  type="radio"
                                  value="cidr"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                网段
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="host"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                主机名
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="instance"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                数据源
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="描述"
                      >
                        描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="cidr"
                        title="网段"
                      >
                        网段
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="cidr"
                            placeholder="请输入{{name}}"
                            type="text"
                            value="10.182.11"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-alert ant-alert-warning"
                  data-show="true"
                  role="alert"
                >
                  <svg
                    class="ant-alert-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                      fill="#EBAD1C"
                    />
                  </svg>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-message"
                    >
                      当修改匹配类型或匹配内容后，该条记录的匹配次数和最后匹配时间将被重置。
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`slqe/SqlManagementException/UpdateSqlManagementException render update sql management exception when type is fp_sql 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  更新管控SQL例外
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="匹配类型"
                      >
                        匹配类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-radio-group ant-radio-group-outline"
                            id="type"
                          >
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                关键字
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio ant-radio-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-radio-input"
                                  type="radio"
                                  value="fp_sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                SQL指纹
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="ip"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                IP
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="cidr"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                网段
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="host"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                主机名
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="instance"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                数据源
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="描述"
                      >
                        描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                          >
                            desc
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="sql"
                        title="SQL语句"
                      >
                        SQL语句
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="custom-monaco-editor-wrapper css-1esok7i"
                          >
                            <input
                              aria-required="true"
                              class="custom-monaco-editor"
                              height="500px"
                              id="sql"
                              language="sql"
                              options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                              value="SELECT"
                              width="100%"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-alert ant-alert-warning"
                  data-show="true"
                  role="alert"
                >
                  <svg
                    class="ant-alert-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                      fill="#EBAD1C"
                    />
                  </svg>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-message"
                    >
                      当修改匹配类型或匹配内容后，该条记录的匹配次数和最后匹配时间将被重置。
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`slqe/SqlManagementException/UpdateSqlManagementException render update sql management exception when type is host 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  更新管控SQL例外
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="匹配类型"
                      >
                        匹配类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-radio-group ant-radio-group-outline"
                            id="type"
                          >
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                关键字
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="fp_sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                SQL指纹
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="ip"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                IP
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="cidr"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                网段
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio ant-radio-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-radio-input"
                                  type="radio"
                                  value="host"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                主机名
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="instance"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                数据源
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="描述"
                      >
                        描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="host"
                        title="主机名"
                      >
                        主机名
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="host"
                            placeholder="请输入{{name}}"
                            type="text"
                            value="#"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-alert ant-alert-warning"
                  data-show="true"
                  role="alert"
                >
                  <svg
                    class="ant-alert-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                      fill="#EBAD1C"
                    />
                  </svg>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-message"
                    >
                      当修改匹配类型或匹配内容后，该条记录的匹配次数和最后匹配时间将被重置。
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`slqe/SqlManagementException/UpdateSqlManagementException render update sql management exception when type is instance 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  更新管控SQL例外
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="匹配类型"
                      >
                        匹配类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-radio-group ant-radio-group-outline"
                            id="type"
                          >
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                关键字
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="fp_sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                SQL指纹
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="ip"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                IP
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="cidr"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                网段
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="host"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                主机名
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio ant-radio-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-radio-input"
                                  type="radio"
                                  value="instance"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                数据源
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="描述"
                      >
                        描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="instance"
                        title="数据源"
                      >
                        数据源
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-single ant-select-show-arrow"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <span
                                class="ant-select-selection-search"
                              >
                                <input
                                  aria-activedescendant="instance_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="instance_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="instance_list"
                                  aria-required="true"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="instance"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                              </span>
                              <span
                                class="ant-select-selection-item"
                                title="mysql-1 (10.186.62.13:33061)"
                              >
                                mysql-1 (10.186.62.13:33061)
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-alert ant-alert-warning"
                  data-show="true"
                  role="alert"
                >
                  <svg
                    class="ant-alert-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                      fill="#EBAD1C"
                    />
                  </svg>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-message"
                    >
                      当修改匹配类型或匹配内容后，该条记录的匹配次数和最后匹配时间将被重置。
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`slqe/SqlManagementException/UpdateSqlManagementException render update sql management exception when type is ip 1`] = `
<body>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  更新管控SQL例外
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="匹配类型"
                      >
                        匹配类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-radio-group ant-radio-group-outline"
                            id="type"
                          >
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                关键字
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="fp_sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                SQL指纹
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio ant-radio-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-radio-input"
                                  type="radio"
                                  value="ip"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                IP
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="cidr"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                网段
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="host"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                主机名
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="instance"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                数据源
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="描述"
                      >
                        描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="ip"
                        title="IP"
                      >
                        IP
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="ant-input basic-input-wrapper css-1pd1cd5"
                            id="ip"
                            placeholder="请输入{{name}}"
                            type="text"
                            value="127.0.0.1"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-alert ant-alert-warning"
                  data-show="true"
                  role="alert"
                >
                  <svg
                    class="ant-alert-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                      fill="#EBAD1C"
                    />
                  </svg>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-message"
                    >
                      当修改匹配类型或匹配内容后，该条记录的匹配次数和最后匹配时间将被重置。
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`slqe/SqlManagementException/UpdateSqlManagementException render update sql management exception when type is sql 1`] = `
<body>
  <div />
  <div>
    <div
      class="ant-drawer ant-drawer-right ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  更新管控SQL例外
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  data-testid="basic-drawer-close-icon"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    fill-rule="evenodd"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical"
              >
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="type"
                        title="匹配类型"
                      >
                        匹配类型
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-radio-group ant-radio-group-outline"
                            id="type"
                          >
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio ant-radio-checked"
                              >
                                <input
                                  checked=""
                                  class="ant-radio-input"
                                  type="radio"
                                  value="sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                关键字
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="fp_sql"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                SQL指纹
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="ip"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                IP
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="cidr"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                网段
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="host"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                主机名
                              </span>
                            </label>
                            <label
                              class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                            >
                              <span
                                class="ant-radio"
                              >
                                <input
                                  class="ant-radio-input"
                                  type="radio"
                                  value="instance"
                                />
                                <span
                                  class="ant-radio-inner"
                                />
                              </span>
                              <span>
                                数据源
                              </span>
                            </label>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class=""
                        for="desc"
                        title="描述"
                      >
                        描述
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <textarea
                            class="ant-input basic-input-wrapper textarea-no-resize css-1pd1cd5"
                            id="desc"
                            placeholder="请输入{{name}}"
                            style="resize: none; height: -70px; min-height: -14px; max-height: -70px;"
                          >
                            desc
                          </textarea>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item"
                >
                  <div
                    class="ant-row ant-form-item-row"
                  >
                    <div
                      class="ant-col ant-col-24 ant-form-item-label"
                    >
                      <label
                        class="ant-form-item-required"
                        for="sql"
                        title="SQL语句"
                      >
                        SQL语句
                      </label>
                    </div>
                    <div
                      class="ant-col ant-col-24 ant-form-item-control"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="custom-monaco-editor-wrapper css-1esok7i"
                          >
                            <input
                              aria-required="true"
                              class="custom-monaco-editor"
                              height="500px"
                              id="sql"
                              language="sql"
                              options="{"automaticLayout":true,"minimap":{"enabled":false},"fontFamily":"SF Mono","fontSize":14,"fontWeight":"400","lineNumbersMinChars":2,"suggestFontSize":14,"scrollBeyondLastLine":false,"lineHeight":24,"letterSpacing":0.8,"overviewRulerBorder":false,"wordWrap":"on","wrappingStrategy":"advanced","wrappingIndent":"indent","scrollbar":{"vertical":"visible","horizontal":"visible","useShadows":false,"verticalScrollbarSize":12,"horizontalScrollbarSize":12,"alwaysConsumeMouseWheel":false},"folding":false,"lineNumbers":"on","glyphMargin":false,"lineDecorationsWidth":50,"renderValidationDecorations":"on","guides":{"indentation":true,"highlightActiveIndentation":true}}"
                              value="SELECT"
                              width="100%"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-alert ant-alert-warning"
                  data-show="true"
                  role="alert"
                >
                  <svg
                    class="ant-alert-icon"
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m8.577 2 6.35 11a.667.667 0 0 1-.577 1H1.648a.667.667 0 0 1-.577-1l6.35-11a.667.667 0 0 1 1.156 0m-1.244 8.667V12h1.333v-1.333zm0-4.667v3.334h1.333V6z"
                      fill="#EBAD1C"
                    />
                  </svg>
                  <div
                    class="ant-alert-content"
                  >
                    <div
                      class="ant-alert-message"
                    >
                      当修改匹配类型或匹配内容后，该条记录的匹配次数和最后匹配时间将被重置。
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提 交
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
  <textarea
    aria-hidden="true"
    style="letter-spacing:normal;line-height:1.5714285714285714;padding-top:4px;padding-bottom:4px;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans',sans-serif,'Apple Color Emoji','Segoe UI Emoji','Segoe UI Symbol','Noto Color Emoji';font-weight:;font-size:14px;font-variant:;text-rendering:auto;text-transform:none;width:100%;text-indent:0;padding-left:11px;padding-right:11px;border-width:1px;box-sizing:border-box;word-break:;white-space:pre-wrap;
  min-height:0 !important;
  max-height:none !important;
  height:0 !important;
  visibility:hidden !important;
  overflow:hidden !important;
  position:absolute !important;
  z-index:-1000 !important;
  top:0 !important;
  right:0 !important;
  pointer-events: none !important;
"
    tab-index="-1"
  />
</body>
`;
